# mygpt

./: Cargo.toml  LICENSE  README.md
py/: gptonnx.py
src/: main.rs
